2011-01-25 John Wu <John dot Wu at ACM dot org>
	* src/index.cpp: add checks for nil pointer col

2011-01-06 John Wu <John dot Wu at ACM dot org>
        * doc/*.html: update html files to use RDFa tag for creator

2011-01-04 John Wu <John dot Wu at ACM dot org>
	* src/util.h:1353 use function floor to extract the integer
	portion from the log10 of incoming value instead of rounding with
	static_cast<int>
	* src/ibin.h, src/ibin.cpp: rename granule::loc0 to granule::locm,
	granule::loc1 to granule::locp, update printGranules to check for
	nil pointer of granule::loce

2010-12-22 John Wu <John dot Wu at ACM dot org>
	* src/resources.cpp:381 remove backslash infront of ` to address a
	complaint from PGI compiler
	* src/category.h:128 use the function estimateCost from the
	immediate base class instead of ibis::column
	* tests/Makefile.am: add statements to print a blank statement
	after the completion of check-labeling and check-join

2010-12-21 John Wu <John dot Wu at ACM dot org>
	* src/table.h, src.tafel.h, src/tafel.cpp: add the 5th argument to
	tablex::write and tablex::writeMetaData to write meta tags
	* src/part.cpp: extract column shape from meta tags
	* examples/ardea.cpp: add command line options -i and -tag for
	indexing option and meta tags
	* src/resource.cpp: modify ibis::resource::parseNameValuePairs to
	respect grouping indicated by parentheses and quotes, which is
	necessary to parse column shape which more than one dimension
	* src/ibis.cpp: label1 and label2 usage reversed in doMeshQuery
	* tests/Makefile.am: add test case check-labeling to exercise the
	new labeling functions

2010-12-20 John Wu <John dot Wu at ACM dot org>
	* src/meshQuery.h, src/meshQuery.cpp: break toBlocks into
	toBlocks1, toBlocks2, toBlocks3 and toBlocksN to make it possible
	to compare toBlocksN with others for self-consistency check
	* src/meshQuery.h, src/meshQuery.cpp: add functions to produce and
	label query lines (also called line segments): getHitsAsLines and